--- a/mysite/config.toml
+++ b/mysite/config.toml
@@ -11,9 +11,9 @@ pygmentscodefences = true
 pygmentscodefencesguesssyntax = true
 
 # Your Google analytics code.
-googleAnalytics = "UA-123-45"
+#googleAnalytics = "UA-123-45"
 # Your Disqus sortname.
-disqusShortname = "localhost"
+#disqusShortname = "localhost"
 
 # Number of posts to show in recent posts list (Optional). Defaults to 10.
 paginate = 10
